syntax = "proto3";

import "global.proto";
import "message/cart_dto.proto";

option go_package = "./;proto";
option java_package = "com.github.go2o.rpc";

// 购物车服务
service CartService {
    // 批发购物车接口
    rpc WholesaleCartV1 (WsCartRequest) returns (Result) {
    }
    // 获取购物车,当购物车编号不存在时,将返回一个新的购物车
    rpc GetShoppingCart (ShoppingCartId) returns (SShoppingCart) {
    }
    // 购物车商品操作
    rpc ApplyItem(CartItemOpRequest) returns (CartItemResponse) {
    }
  
    // 勾选商品结算
    rpc CheckCart (CheckCartRequest) returns (Result) {
    }
}

enum ECartItemOp{
    /** 加入购物车 */
    PUT = 0;
    /** 更改数量 */
    CHANGE = 1;
    /** 结账 */
    CHECKOUT = 2;
}

// 购物车加入商品操作请求
message CartItemOpRequest {
    // 购物车编号
    ShoppingCartId cartId = 1;
    // 商品项
    RCartItem item = 2;
    // 操作
    ECartItemOp op = 3; 
}


// 商品项请求参数
message RCartItem{
  //商品编号
  sint64 itemId = 1;
  //SKU编号
  sint64 skuId = 2;
  // 数量
  int32 quantity = 3;
}

message CheckCartRequest {
    ShoppingCartId id = 1;
    repeated SCheckCartItem items = 2;
}

// 购物车编号
message ShoppingCartId{
    // 会员/用户编号
    sint64 userId =  1;
    // 购物车标识,当未指定用户时候使用
    string cartCode = 2;
    // 是否为批发销售的购物车
    bool isWholesale = 3;
}

