syntax = "proto3";

import "global.proto";

option go_package = "./;proto";
option java_package = "com.github.go2o.rpc";

/** 状态服务 */
service StatusService {
    // 发送心跳
    rpc Ping (Empty) returns (String) {
    } 
    // 打招呼
    rpc Hello (String) returns (String) {
    }
}
